--- a/index_files/tokamak.css
+++ b/index_files/tokamak.css
@@ -152,6 +152,10 @@ html.dark-mode{
 html.dark-mode img{
     filter: invert(100%);
 }
+html.dark-mode .fb-comments{
+    filter: invert(100%);
+}
+
 
 
 #header {
